Ensure colour contrast is accessible on links
At the moment, the default blue used by bootstraps is slightly too light.
This commit fixes that.

It also updates the muted links. These sit just underneath another link
and need to be different to the default colour so it's clear they're
distinct links. Hence why they were previously light gray. I've updated
them to be gray.

--- a/app/assets/stylesheets/govuk_admin_template/_base.scss
+++ b/app/assets/stylesheets/govuk_admin_template/_base.scss
@@ -282,7 +282,7 @@ a.list-group-item {
 
 .link-muted:hover,
 .link-muted:focus {
-  color: $gray;
+  color: #000;
 }
 
 .link-inherit,
@@ -304,7 +304,7 @@ a.list-group-item {
   font-size: 65%;
   font-weight: normal;
   line-height: 1.5;
-  color: $gray-light;
+  color: $gray;
   display: block;
 }
 
