--- a/app/assets/stylesheets/govuk_admin_template/_bootstrap_overrides.scss
+++ b/app/assets/stylesheets/govuk_admin_template/_bootstrap_overrides.scss
@@ -19,8 +19,4 @@
 .lead {
   font-weight: normal;
   color: #555;
-
-  &.text-muted {
-    color: $gray-light;
-  }
 }
